# c89-wav

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.9a9a9ec  helper.c  helper.h  license.md  main.c  makefile  readme.md
examples/: 1ch-edit.c  2ch-edit.c  basic-io.c  header-data.c  mic-recording.c  reading-1ch-wav.c  reading-2ch-wav.c  tone-generator.c
source/: bin.c  bin.h  bin.h.gch  format.c  format.h  format.h.gch  tones.c  tones.h  tones.h.gch
tests/: binary-io.c  binary-io.h  binary-io.h.gch  functionality.c  functionality.h  wav-format.c  wav-format.h  wav-format.h.gch
wav/: format.c  format.h  tones.c  tones.h
